--- a/index.html
+++ b/index.html
@@ -4,25 +4,22 @@
       <title>CafeMap</title>
       <meta charset="UTF-8">
       <link href="./stylesheets.css" media="all" rel="stylesheet"></link>
-      <script type="text/javascript" src="./main.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
       <script src="http://maps.googleapis.com/maps/api/js"></script> 
+
   </head>
 <body>
 <div id="status" class="status"></div>
 
-<fb:login-button scope="public_profile,email,user_likes" onlogin="checkLoginState();"></fb:login-button>
+<div id="login" class="show">
+	<fb:login-button scope="public_profile,email,user_likes" onlogin="checkLoginState();"></fb:login-button>
+</div>
 
-<button onclick="logout();">logout</button>
+<button onclick="logout();" id="logout" class="hide">logout</button>
 
 <h1>CafeMap</h1>
-
-<button onclick="checkDistance();">check distance!</button>
-
-
-
-
+<div id="likeCount"></div>
 <div id="cafes"></div>
-
+<script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
