add like counts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 <button onclick="logout();" id="logout" class="hide">logout</button>
 
 <h1>CafeMap</h1>
-<div id="likeCount"></div>
+<div class="counts">
+	<span id="cafeCount"></span> Cafes
+	/
+	<span id="totalCount"></span> Total Likes
+</div>
 <div id="cafes"></div>
 <script type="text/javascript" src="./main.js"></script>
 </body>
