--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <link href="./stylesheets.css" media="all" rel="stylesheet"></link>
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-      <script src="http://maps.googleapis.com/maps/api/js"></script> 
+      <script src="https://maps.googleapis.com/maps/api/js"></script> 
 
   </head>
 <body>
