--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <title>CafeMap</title>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="./stylesheets.css" media="all" rel="stylesheet"></link>
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
       <script src="https://maps.googleapis.com/maps/api/js"></script> 
